# lev

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.agents/skills/lev/: SKILL.md
.agents/skills/lev/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
docs/: app.js  index.html  styles.css
schemas/: cli-envelope-v1.schema.json  toolchain-index-v1.schema.json
scripts/: install.ps1  install.sh  test-lean-matrix.sh
src/: lib.rs  main.rs
src/app/: cache_commands.rs  dependency_commands.rs  environment_commands.rs  execution_commands.rs  isolated_environment.rs  matrix_commands.rs  mod.rs  native_resolver.rs  project_commands.rs  script_commands.rs  self_commands.rs  sync_commands.rs  tool_commands.rs  toolchain_commands.rs  transaction.rs  workspace_commands.rs
src/cache/: lake_artifacts.rs  mod.rs  registry.rs  remote.rs
src/cli/: cache.rs  mod.rs  project.rs  toolchain.rs  tools.rs
src/core/: atomic_file.rs  bounded_io.rs  clock.rs  file_hash.rs  hex.rs  http_url.rs  json_output.rs  mod.rs  object_transport.rs  platform.rs  platform_dirs.rs  process.rs  signing.rs
src/dependency/: environment.rs  git.rs  graph.rs  mod.rs  reservoir.rs  resolution.rs
src/project/: audit.rs  config.rs  export.rs  lakefile.rs  local_workspace.rs  lockfile.rs  manifest.rs  mod.rs  workspace.rs
src/toolchain/: chunks.rs  download.rs  index.rs  mod.rs
src/toolchain/store/: archive.rs  manifest.rs  mod.rs
tests/: cli.rs  portable_cli.rs
tests/cli/: automation.rs  cache.rs  core.rs  dependencies.rs  environments.rs  toolchains.rs
tests/fixtures/: fake-elan.sh
